# CardGameOnline

./: .gitignore
GameClient/src/: Button.cpp  Button.h  Card.cpp  Card.h  CardManager.cpp  CardManager.h  GameClient.pro  GameManager.cpp  GameManager.h  Lobby.cpp  Lobby.h  LobbyManager.cpp  LobbyManager.h  Menu.cpp  Menu.h  Table.cpp  Table.h  TableManager.cpp  TableManager.h  main.cpp  resources.qrc
GameClient/src/CGS/: CardGame.cpp  CardGame_server.skeleton.cpp  cg_constants.cpp  cg_constants.h  cg_types.cpp  cg_types.h
GameClient/src/GLS/: GameLobby.cpp  GameLobby_server.skeleton.cpp  cgo.thrift  cgo_types.h
GameServer/: CMakeLists.txt
GameServer/src/: CardGameHandler.cpp  CardGameHandler.h  CardGameServer.cpp  CardGameServer.h  ConfigLoader.cpp  ConfigLoader.h  SystemManager.cpp  SystemManager.h  sys.ini
GameServer/src/CGS/: CardGame.h  cg.thrift
GameServer/src/GLS/: cgo.thrift  cgo_types.h
LoginServer/: CMakeLists.txt
LoginServer/src/: ConfigLoader.cpp  ConfigLoader.h  Database.cpp  Database.h  GameLobbyHandler.cpp  GameLobbyHandler.h  GameLobbyServer.cpp  GameLobbyServer.h  SystemManager.cpp  SystemManager.h  main.cpp  sys.ini
LoginServer/src/GLS/: GameLobby.cpp  GameLobby.h  GameLobby_server.skeleton.cpp  cgo.thrift  cgo_constants.cpp  cgo_constants.h  cgo_types.cpp  cgo_types.h
